services/_template/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: SERVICE_NAME
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location /outpost.goauthentik.io {
          proxy_pass              http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io;
          proxy_set_header        Host $host;
          proxy_set_header        X-Original-URL $scheme://$http_host$request_uri;
          add_header              Set-Cookie $auth_cookie;
          auth_request_set        $auth_cookie $upstream_http_set_cookie;
          proxy_pass_request_body off;
          proxy_set_header        Content-Length "";
      }
      location @goauthentik_proxy_signin {
          internal;
          add_header Set-Cookie $auth_cookie;
          return 302 /outpost.goauthentik.io/start?rd=$request_uri;
      }
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request     /outpost.goauthentik.io/auth/nginx;
      error_page       401 = @goauthentik_proxy_signin;
      auth_request_set $auth_cookie $upstream_http_set_cookie;
      add_header       Set-Cookie $auth_cookie;
      auth_request_set $authentik_username $upstream_http_x_authentik_username;
      auth_request_set $authentik_groups   $upstream_http_x_authentik_groups;
      auth_request_set $authentik_email    $upstream_http_x_authentik_email;
      proxy_set_header X-authentik-username $authentik_username;
      proxy_set_header X-authentik-groups   $authentik_groups;
      proxy_set_header X-authentik-email    $authentik_email;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - SERVICE_NAME.10.0.0.200.nip.io
      secretName: SERVICE_NAME-tls
    - hosts:
        - SERVICE_NAME.devandre.sbs
      secretName: SERVICE_NAME-tls
  rules:
    - host: SERVICE_NAME.10.0.0.200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: SERVICE_NAME
                port:
                  name: http
    - host: SERVICE_NAME.devandre.sbs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: SERVICE_NAME
                port:
                  name: http
